# GG-general-GuttmanLab

./: Analyze_dot_blot.ipynb  Analyze_drift_correction.ipynb  Apply_drift_correction_from_CODI.ipynb  Oligostan_v0.1.py  PCF_simplified.ipynb  PCF_simplified_AllBlobsinFOV_automate.ipynb  PCF_simplified_AllCellsinFOV.ipynb  PCF_simplified_AllCellsinFOV_automate.ipynb  PCF_simplified_single_cell.ipynb  Plot_CrossSectionLineImageJ.ipynb  Plot_Electropherogram.ipynb  Plot_PCF-weighted_pooled-fit-single.ipynb  Plot_RNF12 alphafold.ipynb  Plot_SPT_diffusion_profile.ipynb  Plot_qPCR_violinswamp.ipynb  Plot_simple_bar.ipynb  Plot_simple_bar_horizontal.ipynb  Plot_starsolo_h5ad.ipynb  README.md  Simulation-more counts matter.ipynb  basic_operation-bandpass_filter.py  basic_operation-czi2MIPtiff.py  effect_of_normalization_on_significance.html  effect_of_normalization_on_significance.ipynb  probes_csv_to_fasta_forBlastN.py  probes_to_fasta_forBlastN.py  smFISH_blast_analysis.py
image_analysis/pipelines/SACDpy/: .gitignore  README.md  SACDpy_pipeline-Dox_phase_diagram-Hoechst_SPEN.ipynb  SACDpy_pipeline-batch_sinlgeSACD.ipynb  SACDpy_pipeline-batch_timelapse_zstack_SACD.ipynb  SACDpy_pipeline-continuous_video.ipynb  SACDpy_pipeline-discrete_timelapse_MIP_SACD.ipynb  SACDpy_validation_report.html  SACDpy_validation_report.md  pyproject.toml
image_analysis/pipelines/SACDpy/configs/: sacd_live_batch_2026.json
image_analysis/pipelines/SACDpy/scripts/: run_sacd_live_batch.py
image_analysis/pipelines/SACDpy/tests/: test_batch.py  test_continuous_batch.py  test_core.py  (+5 more)
image_analysis/pipelines/SPT/: .gitignore  1_Segmentation.ipynb  ONI_SPT_pipeline.ipynb  README.md  cli_calculate_SPT_all_in_one.py  cli_calculate_saSPT_pooled_one_condition.py  cli_concat_SPT_AIO_files.py  cli_reformat-TrackMate-tracks.py  environment.yml  nb_Plot_SPT_diffusion_profile-multiple_compare.ipynb  nb_Plot_SPT_diffusion_profile.ipynb  pyproject.toml  run_ONI_SPT.py  run_ONI_SPT_batch.py  spt_shared.py  spt_video.py  step01_inspect_inputs.py  step02_preprocess_videos.py  step03_segment_cells.py  step04_detect_spots.py  step05_link_trajectories.py  step06_calculate_diffusion.py  step07_generate_reports.py  step08_make_crop_qc_video.py
(+371 files in other folders)
