[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sacdpy"
version = "0.1.0"
description = "Python port of the core SACD reconstruction pipeline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "scikit-image",
    "tifffile",
    "rich",
    "PyWavelets",
]

[project.optional-dependencies]
phase-diagram = [
    "cellpose>=4.1,<5",
    "matplotlib",
    "pandas",
]

[project.scripts]
sacdpy = "sacdpy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
