[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oni-spt"
version = "0.1.0"
description = "Stand-alone ONI single-particle tracking pipeline"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "numpy>=1.26,<3",
    "pandas>=2",
    "scipy>=1.14,!=1.15.*",
    "scikit-image>=0.24",
    "tifffile>=2024.8",
    "PyYAML>=6",
    "rich>=13",
    "matplotlib>=3.8",
    "spotiflow>=0.6.4.dev0,<0.7",
    "cellpose>=4.1,<5",
    "laptrack>=0.17,<0.18",
]

[project.optional-dependencies]
analysis = ["saspt>=0.4", "seaborn>=0.13"]
test = ["pytest>=8"]

[project.scripts]
oni-spt = "oni_spt.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
